<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="ca.simonho.sensorrecord.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings_menu_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_device_info"
        android:orderInCategory="200"
        android:title="@string/settings_menu_device_info"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="@string/settings_menu_about"
        app:showAsAction="never"/>
</menu>
