<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/window_about"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/window_border"
              android:orientation="vertical"
              android:padding="10dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:src="@mipmap/ic_launcher" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/about_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="@string/about_app_name_label"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/about_app_name_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/about_app_name"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/about_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_app_name"
            android:layout_margin="10dp"
            android:text="@string/about_app_version_label"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/about_app_version_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_app_name_content"
            android:layout_toEndOf="@id/about_app_version"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/about_app_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_app_version"
            android:layout_margin="10dp"
            android:text="@string/about_app_website_label"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/about_app_website_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_app_version_content"
            android:layout_toEndOf="@id/about_app_website"
            android:autoLink="web"
            android:layout_margin="10dp"
            android:text="@string/about_website_link"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/about_close"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/button_close"/>
    </LinearLayout>

</LinearLayout>